style(): fix header search bar text overlapping issue with cross icon

--- a/waters-aem-frontend/src/styles/searchbar.scss
+++ b/waters-aem-frontend/src/styles/searchbar.scss
@@ -124,7 +124,7 @@
             margin-bottom: 0;
             border: $border-medium;
             background: $color-white;
-            padding: $space-xxxs 4em $space-xxs $space-s;
+            padding: $space-xxxs $space-xxl $space-xxs $space-s;
             -webkit-appearance: none;
             -webkit-border-radius: $border-radius;
             border-radius: $border-radius;
